[gd_scene load_steps=30 format=3 uid="uid://brnvn32fmxhg3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_v2x1c"]
[ext_resource type="Texture2D" uid="uid://iokvhh30achh" path="res://art/characters/player.png" id="2_hodrh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dahii"]
atlas = ExtResource("2_hodrh")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bwsh"]
atlas = ExtResource("2_hodrh")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwb3s"]
atlas = ExtResource("2_hodrh")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_panb7"]
atlas = ExtResource("2_hodrh")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo02u"]
atlas = ExtResource("2_hodrh")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_besrm"]
atlas = ExtResource("2_hodrh")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5rah"]
atlas = ExtResource("2_hodrh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_im8qm"]
atlas = ExtResource("2_hodrh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bamxr"]
atlas = ExtResource("2_hodrh")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4s0a"]
atlas = ExtResource("2_hodrh")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhkph"]
atlas = ExtResource("2_hodrh")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jninw"]
atlas = ExtResource("2_hodrh")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb4d6"]
atlas = ExtResource("2_hodrh")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_srrsn"]
atlas = ExtResource("2_hodrh")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbnvt"]
atlas = ExtResource("2_hodrh")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1mew"]
atlas = ExtResource("2_hodrh")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1sko"]
atlas = ExtResource("2_hodrh")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq63q"]
atlas = ExtResource("2_hodrh")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvqrh"]
atlas = ExtResource("2_hodrh")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqejd"]
atlas = ExtResource("2_hodrh")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8vxx"]
atlas = ExtResource("2_hodrh")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kk8x"]
atlas = ExtResource("2_hodrh")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtlbu"]
atlas = ExtResource("2_hodrh")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp4p0"]
atlas = ExtResource("2_hodrh")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_nlyga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dahii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bwsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwb3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_panb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo02u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_besrm")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5rah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im8qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bamxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4s0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhkph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jninw")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb4d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srrsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbnvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1mew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1sko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq63q")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvqrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqejd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8vxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kk8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtlbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp4p0")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nbbyp"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_0wmt5"]
radius = 9.01388

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(10, 16)
scale = Vector2(2, 2)
script = ExtResource("1_v2x1c")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nlyga")
animation = &"side_walk"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_nbbyp")

[node name="interactions" type="Node2D" parent="."]
z_index = 1

[node name="int_area" type="Area2D" parent="interactions"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="int_coll" type="CollisionShape2D" parent="interactions/int_area"]
position = Vector2(0.5, -7.5)
shape = SubResource("CircleShape2D_0wmt5")

[node name="int_label" type="Label" parent="interactions"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -30.0
offset_right = 129.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 1, 1)
text = "test"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="area_entered" from="interactions/int_area" to="." method="_on_int_area_area_entered"]
[connection signal="area_exited" from="interactions/int_area" to="." method="_on_int_area_area_exited"]
